--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <form class="js-form form">
         <input type="text" placeholder="what is your name?" />
     </form>   
-    <h4 class ="js-greetings greetings"></h4> 
+    <h4 class ="js-greetings greetings"></h4>
+    
+    <form class="js-toDoForm">
+        <input type="text" placeholder="Write a to do "/>
+    </form>
+    <ul class="js-toDoList"></ul>
+    </form> 
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
