--- a/index2.html
+++ b/index2.html
@@ -20,9 +20,12 @@
     <ul class = js-todoList></ul>
 
     <h1 class="js-greeting greeting"></h1>
+    <span class="js-weather"></span>
 
     <script src="clock2.js"></script>
     <script src="greeting2.js"></script>
     <script src="todo2.js"></script>
+    <script src="bg2.js"></script>
+    <script src="weather2.js"></script>
 </body>
 </html>
